# MinesweeperHS

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  Makefile  MinesweeperHS.cabal  README.md  build.sh  cabal-js.project  cabal-wasm.project  cabal.project  index.css  index.html  index.js  minify.sh  stack.yaml
.github/workflows/: build_and_deploy.yaml
app/: GameCell.hs  GameDifficulty.hs  GameLogic.hs  GameScreen.hs  GameState.hs  Main.hs  Textures.hs
app/GameLogic/: Functions.hs  Internal.hs  MineGenerator.hs
app/GameState/: Difficulty.hs
src/Control/Monad/: Extra.hs
src/Data/List/: Extra.hs
src/Language/JavaScript/: Foreign.hs  Framework.hs  Wrapper.hs
src/Language/JavaScript/Framework/: AppState.hs  WrappedForeignFunction.hs
src/Language/JavaScript/Framework/Internal/: Foreign.hs
src/Language/JavaScript/Wrapper/: Element.hs  ElementType.hs  ElementWrapper.hs  EventWrapper.hs  WrappedForeignFunction.hs
src/Language/JavaScript/Wrapper/Internal/: Foreign.hs
static/: index.css  index.html  index.js  preload.css
