cabal-version: 2.2

name:           MinesweeperHS
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/MinesweeperHS#readme>
homepage:       https://github.com/t-sasaki915/MinesweeperHS#readme
bug-reports:    https://github.com/t-sasaki915/MinesweeperHS/issues
author:         Toma Sasaki
maintainer:     netst915@gmail.com
copyright:      2025 Toma Sasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/MinesweeperHS

common wasm
  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM

library
  exposed-modules:
      Lib
  other-modules:
      Paths_MinesweeperHS
  autogen-modules:
      Paths_MinesweeperHS
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings

executable MinesweeperHS-exe
  import: wasm
  main-is: Main.hs
  other-modules:
      Paths_MinesweeperHS
      GameLogic
      GameScreen
      GameState
      Textures
  autogen-modules:
      Paths_MinesweeperHS
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      MinesweeperHS
    , base >=4.7 && <5
    , miso
    , lens ==5.3.4
    , mtl ==2.3.1
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings
